--- a/templates/catalog/cart/index.html.twig
+++ b/templates/catalog/cart/index.html.twig
@@ -5,11 +5,11 @@
 {% block catalog_body %}
 <div class="container mx-auto px-4 py-6 relative">
   <!-- Spinner для всей корзины -->
-  <div id="cart-spinner" class="absolute inset-0 z-20" data-module="spinner" data-visible="false" data-overlay="true" data-size="large">
-    <div class="flex items-center justify-center w-full h-full" style="position: relative;">
-      <!-- Spinner content will be inserted here by JavaScript -->
-    </div>
-  </div>
+  {% include 'components/spinner.html.twig' with {
+    id: 'cart-spinner',
+    overlay: true,
+    size: 'large'
+  } %}
 
   <h1 class="text-2xl font-semibold mb-4">Корзина</h1>
 
